# andela-mcp-test

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  env.example  mcp-tools.ipynb  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
config/: servers.example.json  servers.json  servers.test.json
infra/scripts/: bootstrap.sh  import-existing.sh  reset-cloud-run.sh
infra/terraform/: backend.tf  main.tf  outputs.tf  secrets.auto.tfvars.example  variables.tf  versions.tf
infra/terraform/envs/: dev.tfvars  dev.tfvars.example  prod.tfvars  prod.tfvars.example  staging.tfvars
src/andela_mcp/: __init__.py  __main__.py  chat.py  client.py  config.py  logging.py  server.py
src/andela_mcp/static/: index.html
tests/: conftest.py
tests/integration/: test_smoke.py
tests/unit/: test_chat.py  test_client.py  test_config.py  test_server.py
