[project]
name = "andela-mcp"
version = "0.1.0"
description = "MCP-consuming service"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "mcp>=1.2.0",
    "anthropic>=0.40.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "structlog>=24.4",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "google-cloud-logging>=3.11",
    "openai-agents>=0.14.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "types-requests",
]

[project.scripts]
andela-mcp = "andela_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/andela_mcp"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["*.ipynb"]   # exploration notebooks — not production code

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "ASYNC", "S", "RET", "PL", "RUF"]
ignore = ["S101", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "PLR2004", "PLC0415"]   # tests can have local imports for monkeypatching

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_return_any = true
disallow_untyped_decorators = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["mcp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=andela_mcp",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
markers = [
    "integration: tests that hit external services or processes",
]

[tool.coverage.run]
branch = true
source = ["src/andela_mcp"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
